--- a/src/components/Map/pulseRed.css
+++ b/src/components/Map/pulseRed.css
@@ -1,44 +1,60 @@
 
-  /* https://codepen.io/thith/pen/vEOObL */
-  /* The circle */
-  .sonar-emitter {
-    position: relative;
-    margin: 32px auto;
-    width: 17px;
-    height: 17px;
-    border-radius: 9999px;
-    background-color: #ff1100;
+/* https://codepen.io/thith/pen/vEOObL */
+/* The circle */
+.other {
+  background-color: #0020bd;
+}
+.road {
+  background-color: #a5673f;
+}
+.electric {
+  background-color: #fb6d08;
+}
+.health {
+  background-color: #00b5ad;
+}
+.natural {
+  background-color: #21ba45;
+}
+.fire {
+  background-color: #db2828;
+}
+
+.sonar-emitter {
+  position: relative;
+  margin: 32px auto;
+  width: 17px;
+  height: 17px;
+  border-radius: 9999px;
+}
+
+/* the 'wave', same shape and size as its parent */
+.sonar-wave {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  border-radius: 9999px;
+  opacity: 0;
+  z-index: -1;
+  pointer-events: none;
+}
+
+/*
+  Animate!
+  NOTE: add browser prefixes where needed.
+*/
+.sonar-wave {
+  animation: sonarWave 0.5s linear infinite;
+}
+
+@keyframes sonarWave {
+  from {
+    opacity: 0.4;
   }
-  
-  /* the 'wave', same shape and size as its parent */
-  .sonar-wave {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    border-radius: 9999px;
-    background-color: #ff1100;
+  to {
+    transform: scale(5);
     opacity: 0;
-    z-index: -1;
-    pointer-events: none;
   }
-  
-  /*
-    Animate!
-    NOTE: add browser prefixes where needed.
-  */
-  .sonar-wave {
-    animation: sonarWave 1.5s linear infinite;
-  }
-  
-  @keyframes sonarWave {
-    from {
-      opacity: 0.4;
-    }
-    to {
-      transform: scale(3);
-      opacity: 0;
-    }
-  }
-  
+}
